--- a/HotelReservation/HotelReservationEngine/wwwroot/HomePage/index.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HomePage/index.html
@@ -6,7 +6,7 @@
     <metaviewport></metaviewport>
     <link rel="stylesheet" href="/HomePage/Style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="/HomePage/Script.js"></script>    
+       <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-darkness/jquery-ui.min.css" />
 </head>
 <body>
     <div class="row">
@@ -33,10 +33,11 @@
             </nav>
         </div>
     </div>
-
+    <br />
+    <br/>
     <div class="container">
         <div id="hotelSearch">
-            <form id="hotelSearchForm">
+         <form id="hotelSearchForm">
                 <div class="row">
                     <div class="col-md-12">
 
@@ -46,7 +47,7 @@
                                 <div classs="col-md-10">
                                     <div class="form-group">
                                         <label for="from">Going To</label>
-                                        <input type="text" class="form-control placeholderfont" name="goingTo" id="place" placeholder="City,Landmark,Address,Station Name,Hotel Name..">
+                                        <input type="text" class="form-control placeholderfont" name="goingTo" id="place" placeholder="City,Landmark,Address,Station Name,Hotel Name.."required>
                                     </div>
                                 </div>
                             </div>
@@ -54,22 +55,24 @@
 
                         <!--Check In Date-->
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-2">
                                 <div class="form-group">
                                     <label>Check-In</label>
-                                    <div class="input-group">
-                                        <input class="datePicker placeholderfont" type="date" name="checkInDate" placeholder="dd-mm-yyyy" id="datepickerId1">
-                                    </div>
+                                <div class="input-group">
+                                    <input class="datePicker placeholderfont" type="text" name="checkin" placeholder="dd-mm-yyyy" id="checkindate" required>
                                 </div>
                             </div>
+                                </div>
 
                             <!--Check Out Date-->
-                            <div class="col-md-6">
+                            <div class="col-md-2">
                                 <div class="form-group">
                                     <label>Check Out</label>
                                     <div class="input-group">
                                         <span></span>
-                                        <input class="datePicker placeholderfont" type="date" name="checkOutdate" placeholder="dd-mm-yyyy" id="datepickerId2">
+                                            <input class="datePicker placeholderfont" type="text" name="checkout" placeholder="dd-mm-yyyy" id="checkoutdate" required>
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -116,16 +119,22 @@
                             <div id="addElement" style="border: 1px solid black"></div>
                         </div>
 
+                        <div class="form-group">
+                            <div class="col-md-9 col-md-offset-3">
+                            <div id="errors"></div>
+                            </div>
+                        </div>
+
                         <!--Search Button-->
                         <div class="col-md-12">
                             <button type="submit" name="searchBtn" id="searchButton" class="pageButton" onclick="extractData()">Search</button>
                         </div>
                     </div>
-                </div>
-            </form>
-        </div>
-    </div>
+        </form>
+       </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="/HomePage/Script.js"></script> 
 </html>
