multi-avail-feature-complete

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -48,7 +48,7 @@
                 <section>
                     <!--Image-->
                     <div class="col-md-6">
-                        <img src="{{image}}" width="400" height="250" />
+                        <img src="{{image}}" width="200" height="200" />
                     </div>
                 </section>
                 <section>
@@ -62,7 +62,7 @@
                 <section>
                     <!--View Rooms Button-->
                     <div class="col-md-2">
-                        <button name="viewRoomsBtn" id="viewRoomsButton" class="pageButton">View Rooms</button>
+                        <button name="viewRoomsBtn" id="viewRoomsButton" value="{{name}}" class="pageButton">View Rooms</button>
                     </div>
                 </section>
             </div>
