added minor fixes

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
@@ -4,6 +4,7 @@
     <title>Hotel Express</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/Image/favicon-bed.png">
     <link rel="stylesheet" href="/Css/Style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -12,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h6>Hotel Reservation Engine</h6>
+        <h6>.</h6>
     </header>
     <div class="col-md-12">
         <nav class="navbar-inverse">
@@ -112,7 +113,7 @@
             </div>
         </div>
     </article>
-    <footer class="foot"><p> Tavisca &copy; 2017|<a href="#">Open Company Website</a></p></footer>
+    <footer class="foot">Tavisca &copy; 2017|<a class="anchorLink" href="http://www.tavisca.com/">Open Company Website</a></footer>
     <script src="/Js/guestDetailsScript.js"></script>
 </body>
 </html>
