--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="/Image/favicon-bed.png">
-    <link rel="stylesheet" href="/Css/Style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" href="/Image/favicon-bed.png">
+    <link rel="stylesheet" href="/Css/Style.css">
     <title>Hotel Express</title>
 </head>
 <body>
     <header>
         <h6>.</h6>
     </header>
+
     <div class="col-md-12">
         <nav class="navbar-inverse">
             <div class="container-fluid">
@@ -36,48 +37,50 @@
         </nav>
     </div>
 
-    <div class="container heading">
-        <h1> Available Options </h1>
-    </div>
     <div id="hotelList-container">
-        <div class="col-md-12">
+        <div class="row">
             <div class="col-md-4 col-md-offset-5">
                 <img src="/Image/circlepreloader.gif" alt="Loading.." />
             </div>
         </div>
     </div>
+
+    <h1>Your Selection</h1>
+
     <div id="hotelList-container"></div>
     <script id="hotel-item" type="text/x-handlebars-template">
-        {{#each this}}{{#unless image}}
+        {{#each this}}
         <div style="border:solid 1px gray;margin-bottom:10px" class="container">
             <div class="col-md-12">
                 <section>
                     <!--Image-->
-                    <div class="col-md-5">
-                        <img class="hotelImage" src="{{image}}" width="200" height="250" />
+                    <div class="col-md-6">
+                        <img src="{{image}}" width="400" height="250" />
                     </div>
                 </section>
                 <section>
                     <!--Hotel Details-->
                     <div class="col-md-4">
-                        <h4>{{name}}</h4>
-                        <h4>Address :{{address}}</h4>
-                        <h4>Price :{{price}}</h4>
+                        <h4>{{roomtype}}</h4>
+                        <h4>{{address}}</h4>
+                        <h4>{{price}}</h4>
                     </div>
                 </section>
                 <section>
                     <!--View Rooms Button-->
                     <div class="col-md-2">
-                        <button name="viewRoomsBtn" id="viewRoomsButton" value="{{name}}" class="pageButton">View Rooms</button>
+                        <button name="viewRoomsBtn" id="viewRoomsButton" class="pageButton">View Rooms</button>
                     </div>
                 </section>
             </div>
         </div>
-        {{/unless}}{{/each}}
+        {{/each}}
+
     </script>
-    
+    <footer class="foot">Tavisca &copy; 2017|<a class="anchorLink" href="http://www.tavisca.com/">Open Company Website</a></footer>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
-    <script src="/Js/hotelListingScript.js"></script>
+    <script src="/Js/hotelListingScript.js" type=""></script>
 </body>
 </html>
