error handling and minor fixes

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -54,7 +54,7 @@
                 <section>
                     <!--Image-->
                     <div class="col-md-5">
-                        <img class="hotelImage" src="{{image}}" width="200" height="250" />
+                        <img class="hotelImage" src="{{image}}" width="200" height="250" alt="No Image Available"/>
                     </div>
                 </section>
                 <section>
