--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
@@ -38,7 +38,7 @@
         </nav>
     </div>
     <article>
-        <div class="container">
+        <div class="container heading">
             <div id="hotelSearch">
                 <form id="hotelSearchForm" onsubmit="extractData(); return false">
                     <div class="row">
