--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -62,7 +62,7 @@
                     <div class="col-md-4">
                         <h4>{{name}}</h4>
                         <h4>Address :{{address}}</h4>
-                        <h4>Price :{{price}}</h4>
+                        <h4>Price :$ {{price}}</h4>
                     </div>
                 </section>
                 <section>
