updated single avail

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -64,11 +64,10 @@
                         <h4>Address :{{address}}</h4>
                         <h4>Price :$ {{price}}</h4>
                     </div>
-                </section>
-                <section>
+
                     <!--View Rooms Button-->
                     <div class="col-md-2">
-                        <button name="viewRoomsBtn" id="viewRoomsButton" value="{{name}}" class="pageButton">View Rooms</button>
+                        <button name="viewRoomsBtn" id="viewRoomsButton" value="{{name}}" onclick="roomDetails()" class="pageButton">View Rooms</button>
                     </div>
                 </section>
             </div>
