--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelList.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelList.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿<!--<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -19,4 +19,4 @@
         data: modifiedData
     });
 </script>
-</html>
+</html>-->
