add ajax for rooms price

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -70,7 +70,7 @@
                 <section>
                     <!--View Rooms Button-->
                     <div class="col-md-2">
-                        <button name=BookBtn" id="viewRoomsButton" value="{{name}}" class="pageButton">Book</button>
+                        <button name=BookBtn" id="viewRoomsButton" value="{{roomtype}}" onClick="roomPrice(this)" class="pageButton">Book</button>
                     </div>
                 </section>
             </div>
