--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -41,7 +41,7 @@
     </div>
     <div id="hotelList-container">
         <div class="col-md-12">
-            <div class="col-md-offset-5">
+            <div class="col-md-offset-6">
                 <img src="/Image/circlepreloader.gif" alt="Loading.." />
             </div>
         </div>
@@ -60,9 +60,9 @@
                 <section>
                     <!--Hotel Details-->
                     <div class="col-md-4">
-                        <h4>{{name}}</h4>
-                        <h4>Address :{{address}}</h4>
-                        <h4>Price : ${{price}}</h4>
+                        <h3><u>{{name}}</u></h3>
+                        <h3>Address : {{address}}</h3>
+                        <h3>Rating : {{stars}} *</h3>        
                     </div>
                     </section>
                 <section>
