--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -52,10 +52,10 @@
     </div>
     <script id="room-item" type="text/x-handlebars-template">
         <div>
-            <h1>{{hotelname}}</h1>
+            <h1>{{name}}</h1>
         </div>
 
-        {{#each this}}
+        {{#each roomTypes}}
         <div style="border:solid 1px gray;margin-bottom:10px" class="container">
             <div class="col-md-12">
                 <section>
