--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -48,7 +48,7 @@
     </div>
 
     <script id="x" type="text/x-handlebars-template">
-        <div class="container" id="hotelnm">
+        <div class="container heading" id="hotelnm">
             <h1>{{ hotelname }}</h1>
         </div>
     </script>
