--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -80,13 +80,13 @@
                         <!-- item -->
                         <div class="panel panel-pricing">
                             <div class="panel-heading">
-                                <h4>Starting From</h4>
+                                <h4><u>Starting From</u></h4>
                             </div>
                             <div class="panel-body text-center">
                                 <p class="p-price">$ {{price}}</p>
                             </div>
                             <div class="panel-footer">
-                                <button name="BookBtn" id="viewRoomsButton" class="panelButton" value="{{roomtype}}" onclick="roomPrice(this)">Subscribe Now</button>
+                                <button name="BookBtn" id="viewRoomsButton" class="panelButton" value="{{roomtype}}" onclick="roomPrice(this)">N</button>
                             </div>
 
                         </div>
