add pricing page

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -86,7 +86,7 @@
                                 <p class="p-price">$ {{price}}</p>
                             </div>
                             <div class="panel-footer">
-                                <button name="BookBtn" id="viewRoomsButton" class="panelButton" value="{{roomtype}}" onclick="roomPrice(this)">N</button>
+                                <button name="BookBtn" id="viewRoomsButton" class="panelButton" value="{{roomtype}}" onclick="roomPrice(this)">Book Now</button>
                             </div>
 
                         </div>
