added pricing of room

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/pricing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/pricing.html
@@ -57,6 +57,13 @@
                     </div>
                     <div class="col-md-6">
                         <label>{{totalPrice}}</label>
+                        <label>{{bedtype}}</label>
+                        <label>{{roomName}}</label>
+                        <label>{{guestCount}}</label>
+                        <label>{{checkin}}</label>
+                        <label>{{checkout}}</label>
+                        <label>{{address}}</label>
+
                     </div>
                     <!--View Rooms Button-->
                     <div>
